--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/stumbler.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/stumbler.html
@@ -2,6 +2,8 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
+{% from "macros.html" import google_play_button with context %}
+
 {% extends "mozorg/contribute/tasks/taskview-base.html" %}
 
 {% add_lang_files "mozorg/contribute/signup" %}
@@ -19,9 +21,11 @@
       </header>
       <div class="step-content">
         {{ high_res_img('contribute/signup/stumbler.png', {'alt': '', 'width': '620', 'class': 'feature-img'}) }}
-        <a rel="external" class="stumbler-button" href="https://play.google.com/store/apps/details?id=org.mozilla.mozstumbler" target="_blank">
-          {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True, 'data-action': 'install', 'data-task': 'stumbler', 'data-step': 'one', 'data-complete': 'true'}) }}
-        </a>
+        {{ google_play_button(alt_href='https://play.google.com/store/apps/details?id=org.mozilla.mozstumbler', anchor_attributes={
+          'target': '_blank'
+        }, class_name='stumbler-button', extra_img_attributes={
+          'data-action': 'install', 'data-task': 'stumbler', 'data-step': 'one', 'data-complete': 'true'
+        }) }}
         <p>{{ _('<a href="%s" target="_blank">Learn more about Mozilla Location Services</a> and discover more ways to get involved.')|format('https://location.services.mozilla.com/') }}</p>
       </div>
     </li>
