--- a/bedrock/firefox/templates/firefox/android/index.html
+++ b/bedrock/firefox/templates/firefox/android/index.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% from "macros.html" import fxfamilynav, send_to_device with context %}
+{% from "macros.html" import fxfamilynav, google_play_button, send_to_device with context %}
 
 {% extends "firefox/base-resp.html" %}
 
@@ -34,9 +34,7 @@
 {% block site_header_unwrapped %}
   {% call fxfamilynav('android') %}
     <div class="{% if has_widget %}show-widget{% endif %}">
-      <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android">
-        {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
-      </a>
+      {{ google_play_button(class_name='dl-button') }}
       <button id="send-to-button-header" class="send-to button dark" type="button" data-button-name="Get Firefox for Android">{{ _('Get Firefox for Android') }}</button>
     </div>
   {% endcall %}
@@ -61,9 +59,7 @@
       <div class="{% if has_widget %}show-widget{% endif %}">
         {{ send_to_device(platform='android', include_logo=False, spinner_color='#fff') }}
 
-        <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android">
-          {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
-        </a>
+        {{ google_play_button(class_name='dl-button') }}
       </div>
 
       {# happy little droid #}
@@ -387,9 +383,7 @@
         <div id="download-content">
           <h3>{{ _('Choose Firefox') }}</h3>
           <div id="send-to-device-footer">
-            <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android" data-alt="{{ _('Get Firefox for Android') }}">
-              {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
-            </a>
+            {{ google_play_button(anchor_attributes={'data-alt': _('Get Firefox for Android')}, class_name='dl-button') }}
             <button id="send-to-button-footer" class="send-to button dark" type="button" data-button-name="Get Firefox for Android">{{ _('Get Firefox for Android') }}</button>
           </div>
         </div>{#-- /#download-content --#}
