Update Gigabit T&C, link to 2016 Proposal Template
Closes https://github.com/mozilla/learning.mozilla.org/issues/1922, https://bugzilla.mozilla.org/show_bug.cgi?id=1286645

--- a/bedrock/gigabit/templates/gigabit/apply.html
+++ b/bedrock/gigabit/templates/gigabit/apply.html
@@ -151,7 +151,7 @@
             {% endtrans %}
             </li>
             <li>
-            {% trans url_handy_template='//docs.google.com/document/d/1XC8SH5Th-8_12kq7L3trtV31fn36HEj7HM7g6zzuM9g/edit' %}
+            {% trans url_handy_template='https://drive.google.com/file/d/0B9NqWPTRsfNXNjlKT0tMVlcySlhfZmVlQTBINXVrN0FSVlI0/view' %}
               Prepare your application using our <a href='{{ url_handy_template }}'>Handy Template</a>.
             {% endtrans %}
             </li>
