--- a/media/css/gigabit/gigabit.less
+++ b/media/css/gigabit/gigabit.less
@@ -191,6 +191,10 @@ main article {
       .font-size(@baseFontSize);
       color: #333;
     }
+    ol ol {
+        margin-bottom: 0;
+        list-style-type: lower-alpha;
+    }
   }
 
   .section-header {
